--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier sind die Songs, die Sie gespeichert haben",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Hier sind Ihre anderen Alben",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Here are the artists saved on your device.",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Ihre letzten Suchen",
   "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
   "SEARCH_RESULT_LOADER_LABEL": "Musik laden...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "Einstellungen",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Ändern Sie die App im Light-Mode oder Dark-Mode",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Share",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Switch Theme",
   "THEME_MODE_DARK": "Dark",
