--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tracks",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Do you want to remove this track saved on your device?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Are you sure?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "More albums",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "More artists",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Your recent searches",
   "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
   "SEARCH_RESULT_LOADER_LABEL": "Getting your music...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Here's a list of what we've found so far",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "Settings",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Change the app to light or dark mode",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Share",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Switch theme",
   "THEME_MODE_DARK": "Dark",
