--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Pistes de l'album",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste enregistrée sur votre appareil?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "En cours de synchronisation de votre musique local.\nNe fermez pas l'applicatiopn svp.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Plus d'album",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Plus d'artistes",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Vos recherches récentes",
   "SEARCH_NO_RECENT_SEARCHES": "Vos recherches récentes s'afficheront ici",
   "SEARCH_RESULT_LOADER_LABEL": "Obtention de votre musique ...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Dossier selectionnés:",
   "SELECTED_DIRECTORY": "Répertoire sélectionné:",
   "SETTING": "Paramètres",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Changez l'application en mode clair ou sombre",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Partager",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Debut de lecture",
   "SWITCH_THEME": "Changer de theme",
   "THEME_MODE_DARK": "Sombre",
