--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "एल्बम के गाने",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "आपका स्थानीय संगीत सिंक्रनाइज़ किया जा रहा है.\nऐप्लिकेशन को बंद करना अच्छा विचार नहीं है!",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "अन्य एल्बम",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "अन्य कलाकार",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "आपके पिछले खोज",
   "SEARCH_NO_RECENT_SEARCHES": "आपके ",
   "SEARCH_RESULT_LOADER_LABEL": "आपका गाना आ रहा है...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "सेटिंग",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "ऐप को लाइट या डार्क मोड में यूज़ करें",
   "SETTING_THEME_TITLE": "ऐप मोड",
   "SHARE": "शेयर",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "प्लेबैक शुरू हो रहा है",
   "SWITCH_THEME": "थीम बदलें",
   "THEME_MODE_DARK": "डार्क",
