--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Számok az albumból",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "A helyi fájlok szinkronizálása folyamatban.\nEszedbe se jusson bezárni az appot.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "További albumok",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "További előadók",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Legutóbbi keresések",
   "SEARCH_NO_RECENT_SEARCHES": "Itt fognak megjelenni a legutóbbi kereséseid",
   "SEARCH_RESULT_LOADER_LABEL": "Zenék hozzádása folyamatban...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Kiválasztott mappák:",
   "SELECTED_DIRECTORY": "Kiválasztott mappa:",
   "SETTING": "Beállítások",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Világos vagy sötét módot állíthatsz be",
   "SETTING_THEME_TITLE": "Téma",
   "SHARE": "Megosztás",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Lejátszás indítása...",
   "SWITCH_THEME": "Téma váltása",
   "THEME_MODE_DARK": "Sötét",
