--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "トラック",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "端末の音楽を同期中。\nアプリを終了しないでください。",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "アルバムをもっと見る",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "アーティストをもっと見る",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "最近の検索",
   "SEARCH_NO_RECENT_SEARCHES": "ここに最近の検索が表示されます",
   "SEARCH_RESULT_LOADER_LABEL": "音楽を取得中...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "これらが見つかりました",
   "SELECTED_DIRECTORY": "フォルダを選択:",
   "SETTING": "設定",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "アプリのテーマをライトまたはダークに変更します",
   "SETTING_THEME_TITLE": "テーマ",
   "SHARE": "共有",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "再生開始",
   "SWITCH_THEME": "テーマを変更",
   "THEME_MODE_DARK": "ダーク",
