--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier zijn de nummers die u opgeslagen heeft",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Je lokale muziek wordt gesynchroniseerd. Sluit de app niet af.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Meer albums",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Meer artiesten",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Uw recente zoekopdrachten",
   "SEARCH_NO_RECENT_SEARCHES": "Uw recente zoekopdrachten zullen hier getoond worden",
   "SEARCH_RESULT_LOADER_LABEL": "Uw muziek verkrijgen...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Geselecteerde mappen:",
   "SELECTED_DIRECTORY": "Geselecteerde map:",
   "SETTING": "Instellingen",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Verander de app naar lichte of donkere modus",
   "SETTING_THEME_TITLE": "Thema",
   "SHARE": "Delen",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Afspelen starten",
   "SWITCH_THEME": "Wissel Thema",
   "THEME_MODE_DARK": "Donker",
