--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Aqui estão alguns outros álbuns",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Aqui estão os artistas salvos no seu dispositivo.",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Suas buscas recentes",
   "SEARCH_NO_RECENT_SEARCHES": "Suas pesquisas recentes aparecerão aqui",
   "SEARCH_RESULT_LOADER_LABEL": "Baixando sua música...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Diretório selecionado:",
   "SETTING": "Configurações",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Mude o tema do aplicativo para claro ou escuro",
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Compartilhar",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Trocar tema",
   "THEME_MODE_DARK": "Escuro",
