--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Сохранённые треки",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Другие альбомы",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Другие исполнители",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Недавние запросы",
   "SEARCH_NO_RECENT_SEARCHES": "Здесь появится история поиска",
   "SEARCH_RESULT_LOADER_LABEL": "Получаем музыку...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "Настройки",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Сменить тему приложения",
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
