--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tukaj so shranjene pesmi",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Tvoja kolekcija se sinhronizira z aplikacijo.\nNi dobra ideja, da zapreš aplikacijo.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Tukaj so shranjeni albumi",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Tukaj so ustvarjalci, shranjeni v tvoji napravi.",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Tvoja nedavna iskanja",
   "SEARCH_NO_RECENT_SEARCHES": "Tvoji nedavni prenosi so tukaj",
   "SEARCH_RESULT_LOADER_LABEL": "Pridobivanje tvoje glasbe...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Izbrani direktoriji:",
   "SELECTED_DIRECTORY": "Izbran direktorij:",
   "SETTING": "Nastavitve",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Menjaj med temnim in svetlim načinom",
   "SETTING_THEME_TITLE": "Način",
   "SHARE": "Deli",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
   "SWITCH_THEME": "Zamenjaj temo",
   "THEME_MODE_DARK": "Temni",
