--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "专辑中歌曲",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "您本地的音乐同步中。\n现在请不要关闭应用。",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "更多专辑",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "更多艺术家",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "您最近搜索记录",
   "SEARCH_NO_RECENT_SEARCHES": "您最近的搜索记录显示在这里",
   "SEARCH_RESULT_LOADER_LABEL": "获取您的音乐中...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "已选择目录：",
   "SELECTED_DIRECTORY": "已选择目录：",
   "SETTING": "设置",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "切换应用至明亮或暗色主题",
   "SETTING_THEME_TITLE": "主题",
   "SHARE": "分享",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "开启播放中",
   "SWITCH_THEME": "切换主题",
   "THEME_MODE_DARK": "暗色",
