--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Mozika ao amini'ilay rakikira",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Te hamafa ity mozika voatahiry ao amin'ny fitaovanao ity ve ianao?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Mandrindra ny mozika eo an-toerana.\n Aza faranana ny fampiaharana azafady.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Rakikira hafa",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Mpanankato hafa",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Ny karoka nataonao tato ho ato",
   "SEARCH_NO_RECENT_SEARCHES": "Hiseho eto ny fikarohana nataonao tato ho ato",
   "SEARCH_RESULT_LOADER_LABEL": "Fahazoana ireo mozikanao ...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Rakitra voafantina:",
   "SELECTED_DIRECTORY": "Lahatahiry voafantina:",
   "SETTING": "Fikirana",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Ovao ny fampiharana ho maivana na ho maizina",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Zaraina",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Fanombohana ny famakiana",
   "SWITCH_THEME": "Hanova lohahevitra",
   "THEME_MODE_DARK": "Maizina",
