--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -21,6 +21,7 @@
   "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Låtar från albumet",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Vill du avlägsna denna låt sparad på din enhet?",
   "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Är du säker?",
+  "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Din lokala musik synkas.\nInte en god ide' att stänga applikationen.",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Fler album",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Fler artister",
@@ -85,7 +86,7 @@
   "SEARCH_HISTORY_SUBHEADER": "Dina senaste sökningar",
   "SEARCH_NO_RECENT_SEARCHES": "Dina senaste sökningar visas här",
   "SEARCH_RESULT_LOADER_LABEL": "Hämtar din musik...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEARCH_WELCOME": "Search Harmonoid ...",
   "SELECTED_DIRECTORIES": "Valda kataloger:",
   "SELECTED_DIRECTORY": "Vald katalog:",
   "SETTING": "Inställningar",
@@ -118,6 +119,7 @@
   "SETTING_THEME_SUBTITLE": "Ändra applikationen till ljust eller mörkt läge",
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Dela",
+  "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Startar uppspelning",
   "SWITCH_THEME": "Byt tema",
   "THEME_MODE_DARK": "Mörk",
